--- a/package.json
+++ b/package.json
@@ -8,41 +8,46 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build": "expo export --platform web",
     "lint": "eslint . --ext .ts,.tsx",
     "typecheck": "tsc --noEmit",
     "test": "jest"
   },
   "dependencies": {
+    "@journeyapps/react-native-quick-sqlite": "2.5.0",
     "@legendapp/state": "2.1.15",
     "@powersync/react-native": "1.28.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@shopify/flash-list": "1.7.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@shopify/flash-list": "2.0.2",
+    "@supabase/supabase-js": "2.93.3",
     "chrono-node": "2.7.7",
-    "expo": "~53.0.26",
-    "expo-asset": "~11.1.7",
-    "expo-font": "~13.3.2",
-    "expo-router": "~5.1.11",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "expo": "54.0.33",
+    "expo-asset": "~12.0.12",
+    "expo-font": "~14.0.11",
+    "expo-linking": "8.0.11",
+    "expo-router": "~6.0.23",
+    "expo-sqlite": "~16.0.10",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
-    "@types/react": "19.0.0",
+    "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "8.18.0",
     "@typescript-eslint/parser": "8.18.0",
     "eslint": "9.17.0",
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.1.0",
     "jest": "29.7.0",
-    "typescript": "5.3.3"
+    "typescript": "~5.9.2"
   },
   "engines": {
     "node": ">=20.0.0"
